tests/circuits/valids/subject_sample/bad.nts
.chipsets:
input   i
output  o
.links:
a:1     o:1