tests/circuits/invalids/invalid_pin_2.nts
.chipsets:
input   a
input   b
4081    and
output  s
.links:
a:1     and:0
b:1     and:2
and:3    s:1